--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@ body {
 
 .jumbotron {
   text-align: center;
-  padding-bottom: 50px;
+  padding: 40px;
 }
 
 /* Glyphicons
@@ -51,3 +51,16 @@ body {
 .carousel-inner{
   padding: none;
   width: 100%;
+}
+
+.intro-img {
+	max-height: 100%;
+	width: 100%;
+	object-fit:cover;
+
+}
+
+	.item{
+	  height: 600px;
+	  width: 100%;
+	}
